# anr-cli

./: AGENTS.md  AI_NATIVE_REPO_SPEC.md  ANR_LEVEL.yaml  README.md  anr.yaml  pyproject.toml
.agents/: context-index.md
.agents/guardrails/: architecture-rules.md  forbidden-zones.md
.agents/skills/: code-review.md  debugging.md
.agents/workflows/: bugfix.md  feature-development.md  migrate-repository-to-anr.md  migrate-to-anr.md
.github/: .gitkeep  CODEOWNERS
.github/ISSUE_TEMPLATE/: agent-template-feedback.md
.github/workflows/: anr-validate.yml  repo-hygiene.yml
anr/: __init__.py  apply.py  cli.py  init.py  migrate.py  plan.py  profiles.py  repo_scan.py  template.py  upgrade.py  validate.py
anr/llm/: __init__.py  ollama_provider.py  openai_provider.py  provider.py
docs/: AGENT.md  STATUS.md  ai-native-repositories-paper.md  anr-compliance-checklist.md  anr-positioning.md  architecture.md  compliance-levels.md  evaluation.md  related-work.md  research.md  terminology.md  threats-to-validity.md
examples/basic-anr-project/: AGENTS.md
examples/basic-anr-project/docs/: AGENT.md  architecture.md
examples/basic-anr-project/src/: AGENT.md  main.js
examples/basic-anr-project/tests/: AGENT.md  example.test.js
examples/basic-anr-project/tools/: AGENT.md
registry/: README.md
registry/examples/: README.md
registry/skills/: README.md
registry/workflows/: README.md
src/: AGENT.md
templates/: module-agent.md
tests/: AGENT.md  test_init_profiles.py
tools/: AGENT.md
tools/anr-cli/: index.js  init.js  package.json  validate.js
