[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anr-cli"
version = "0.1.0"
description = "CLI to bootstrap and validate AI Native Repository (ANR) structure"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ANR Contributors" }]

[project.scripts]
anr = "anr.cli:main"

[tool.setuptools.packages.find]
include = ["anr*"]
